--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 		<meta property="og:title" content="XI TKJ 3" />
 		<meta
 			property="og:description"
-			content="Selamat datang di halaman resmi kelas XI TKJ 3 SMK Persada Husada Indonesia! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI TKJ 3, yang tertarik pada Teknik Komputer dan Jaringan." />
+			content="Selamat datang di halaman resmi kelas IX G SMPN 23 SURABAYA! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas IX G" />
 		<meta property="og:image" content="https://xitkj3.vercel.app/Welcome.png" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://xitkj3.vercel.app/" />
-		<meta property="twitter:title" content="XI TKJ 3" />
+		<meta property="twitter:url" content="https://webkelas-ozaloisfl-iyonns-projects.vercel.app/" />
+		<meta property="twitter:title" content="IX G" />
 		<meta
 			property="twitter:description"
-			content="Selamat datang di halaman resmi kelas XI TKJ 3 SMK Persada Husada Indonesia! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI TKJ 3, yang tertarik pada Teknik Komputer dan Jaringan." />
+			content="Selamat datang di halaman resmi kelas IX G SMPN 23 SURABAYA! Mari mengenal lebih dekat tentang kami" />
 		<meta property="twitter:image" content="https://xitkj3.vercel.app/Welcome.png" />
 	</head>
 	<body>
